# qr-code-generator

./: .gitignore  README.md
Backend/: .gitignore  Cargo.toml  config.toml
Backend/src/: db_initializer.rs  layout.rs  main.rs  postgresql.rs  qr_json.rs  qrdata.rs  qrgenerator.rs  response.rs  version.rs
Backend/src/api/: change_dyn_qr.rs  change_email.rs  change_icon.rs  change_password.rs  change_qr.rs  create_dynamic_qr.rs  defaultusericon.rs  delete_qr.rs  hashing_password.rs  load_email.rs  load_qr.rs  load_session.rs  login.rs  mod.rs  registry.rs  save_qr.rs  send_data.rs  username.rs  utils.rs  verify_password.rs
Backend/src/content/: email.rs  event.rs  mod.rs  paypal.rs  phonenumber.rs  sms.rs  url.rs  vcard.rs  whatsapp.rs
Backend/src/psql/: change_dyn_qr.rs  change_qr.rs  checkemail.rs  create_dyn_qr.rs  delete_qr.rs  icons.rs  loadqr.rs  mod.rs  registry.rs  save_session.rs  saveqr.rs  session.rs  user.rs
frontend/: .eslintrc.js  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/Reference/src/: App.vue
frontend/Reference/src/components/: TheWelcome.vue
frontend/src/: App.vue  AppView.vue  main.ts
frontend/src/locales/: de.ts  en.ts  index.ts
frontend/src/router/: index.ts
frontend/src/stores/: index.ts  layout.ts  user.ts
frontend/src/views/: NotFound.vue
frontend/src/views/dynamic/: DynamicMainView.vue  DynamicWebsiteHeader.vue
frontend/src/views/hub/: HubView.vue
frontend/src/views/login/: LoginView.vue
frontend/src/views/qr-generator/: MainView.vue
(+51 files in other folders)
