[package]
name = "qrcode"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["rand"] }
axum = { version = "0.6.18", features = ["multipart", "json"] }
base64 = "0.21.2"
bcrypt = "0.15"
chrono = "0.4.32"
config-file = "0.2.3"
either = "1.9.0"
fast_qr = { version = "0.10.2", features = ["image", "svg"] }
once_cell = "1.21.3"
password-hash = "0.5"
randomizer = "0.1.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "limit", "trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
